zebra-rpc/src/methods/tests/snapshots/get_block_invalid_excessive_height_verbosity_0@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: response
---
{
  "Err": {
    "code": -8,
    "message": "Block not found"
  }
}
