zebra-rpc/src/methods/tests/snapshots/get_block_subsidy_pre_canopy_height@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_block_subsidy
---
{
  "miner": 5.0,
  "founders": 1.25,
  "fundingstreamstotal": 0.0,
  "lockboxtotal": 0.0,
  "totalblocksubsidy": 6.25
}
